--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
     "react": "^19.2.3",
-    "xlsx": "0.18.5",
-    "@google/genai": "^1.34.0"
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
